feat(web): add meta tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,28 @@
     <link rel="icon" type="image/svg+xml" href="public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;500&display=swap" rel="stylesheet" />
+   
+    <!-- HTML Meta Tags -->
     <title>Diana Alfaro 🌱 Alfalfita.cloud</title>
+    <meta name="description" content="Apasionada por la tecnología en la nube, en especial la tecnología serverless 💚
+  Aquí encontrarás información de mis charlas y también mis redes para contactarme ">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://alfalfita.cloud/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Diana Alfaro 🌱 Alfalfita.cloud">
+    <meta property="og:description" content="Apasionada por la tecnología en la nube, en especial la tecnología serverless 💚
+  Aquí encontrarás información de mis charlas y también mis redes para contactarme ">
+    <meta property="og:image" content="https://media.licdn.com/dms/image/C4E22AQGsSxpKn6Txiw/feedshare-shrink_800/0/1677733460500?e=1681948800&v=beta&t=WwjyahEuEzBudmVLkPsuo7-EJ26cGMZwUymUjewpNqE">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="alfalfita.cloud">
+    <meta property="twitter:url" content="https://alfalfita.cloud/">
+    <meta name="twitter:title" content="Diana Alfaro 🌱 Alfalfita.cloud">
+    <meta name="twitter:description" content="Apasionada por la tecnología en la nube, en especial la tecnología serverless 💚
+  Aquí encontrarás información de mis charlas y también mis redes para contactarme ">
+    <meta name="twitter:image" content="https://media.licdn.com/dms/image/C4E22AQGsSxpKn6Txiw/feedshare-shrink_800/0/1677733460500?e=1681948800&v=beta&t=WwjyahEuEzBudmVLkPsuo7-EJ26cGMZwUymUjewpNqE">
   </head>
   <body>
     <div class="canvas-bg"></div>
