--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
               </a>
             </li>
             <li>
+              <a href="https://github.com/alfalfita/" class="btn btn__rs" target="_blank">
+                <img src="public/icons/256/019-github-1.png" alt="Github" class="btn__icon" />
+                <span>alfalfita</span>
+              </a>
+            </li>
+            <li>
               <a href="https://twitter.com/lachamive" class="btn btn__rs" target="_blank">
                 <img src="public/icons/256/007-twitter-1.png" alt="Linkedin" class="btn__icon" />
                 <span>@lachamive</span>
