feat(web): add github link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li>
               <a href="https://github.com/alfalfita/" class="btn btn__rs" target="_blank">
                 <img src="public/icons/256/019-github-1.png" alt="Github" class="btn__icon" />
-                <span>alfalfita</span>
+                <span>@alfalfita</span>
               </a>
             </li>
             <li>
