feat(GA): add GA tag

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
   Aquí encontrarás información de mis charlas y también mis redes para contactarme ">
     <meta name="twitter:image" content="https://media.licdn.com/dms/image/C4E22AQGsSxpKn6Txiw/feedshare-shrink_800/0/1677733460500?e=1681948800&v=beta&t=WwjyahEuEzBudmVLkPsuo7-EJ26cGMZwUymUjewpNqE">
   </head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C5V9G9LRLF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-C5V9G9LRLF');
+  </script>
+  
   <body>
     <div class="canvas-bg"></div>
     <div class="container z-idx--1">
